refactor: 객실 상세 정보 컬럼 추가